--- a/.env.example
+++ b/.env.example
@@ -1,59 +1,117 @@
+# Jupiter Arbitrage Bot Configuration
+# Copy this to your .env file and update the values
 
-# Core Configuration
-PRIVATE_KEY=your_private_key_here_protect_this_at_all_costs
-SOLANA_WALLET_PRIVATE_KEY=your_actual_private_key_here
+# =============================================================================
+# WALLET CONFIGURATION (REQUIRED)
+# =============================================================================
 
-# Solana RPC endpoints (use high-quality RPCs for real trading)
+PRIVATE_KEY=
+SOLANA_WALLET_PRIVATE_KEY=
+
+# =============================================================================
+# RPC CONFIGURATION (REQUIRED)
+# =============================================================================
 DEFAULT_RPC=https://solana-mainnet.g.alchemy.com/v2/1VO2FcU3Hv7FPSzKMQ6n4
-RPC_URL=https://solana-mainnet.g.alchemy.com/v2/1VO2FcU3Hv7FPSzKMQ6n4
 ALT_RPC_LIST=https://solana-mainnet.g.alchemy.com/v2/1VO2FcU3Hv7FPSzKMQ6n4
-
-# Token Configuration for REAL ARBITRAGE (same token both sides)
-MINT_ADDRESS=So11111111111111111111111111111111111111112
-
-# Transaction Settings - REAL TRADING
-PRIORITY=1000
-TX_SIMULATE=false
-MAX_SLIPPAGE_PERCENT=2.0
-
-# Trading Configuration - REAL MONEY SETTINGS
+# =============================================================================
+# TRADING CONFIGURATION
+# =============================================================================
+# Enable/disable actual trading (set to false for simulation mode)
 TRADING_ENABLED=true
-WRAP_UNWRAP_SOL=true
-TRADE_SIZE_SOL=0.02
+
+# Trade size in SOL (start small for testing)
+TRADE_SIZE_SOL=0.05
 TRADE_SIZE_STRATEGY=fixed
+
+# Profit threshold (minimum profit percentage to execute trade)
+MIN_PROFIT_THRESHOLD=0.025
+
+# Maximum slippage percentage
+MAX_SLIPPAGE_PERCENT=0.8
+
+# Transaction priority (micro lamports)
+PRIORITY=100000
+
+# =============================================================================
+# TIMING CONFIGURATION (INCREASED FOR STABILITY)
+# =============================================================================
+# Minimum interval between operations (increased from 1500 to 3000ms)
+MIN_INTERVAL_MS=10000
+
+# Update interval for main bot loop (increased from 10000 to 20000ms)
+UPDATE_INTERVAL=30000
+
+# Token rotation interval in minutes
+TOKEN_ROTATION_INTERVAL_MINUTES=5
+
+# =============================================================================
+# ERROR HANDLING & RETRY CONFIGURATION
+# =============================================================================
+# Enable automatic retry of failed operations
 AUTO_RETRY_FAILED=true
-RETRY_DELAY_MS=10000
+
+# Delay between retries (increased for better stability)
+RETRY_DELAY_MS=5000
+
+# Maximum retry attempts
 MAX_RETRY_ATTEMPTS=2
-MIN_INTERVAL_MS=8000
+
+# =============================================================================
+# ADVANCED CONFIGURATION
+# =============================================================================
+# Enable adaptive slippage based on market conditions
 ADAPTIVE_SLIPPAGE=true
-UPDATE_INTERVAL=15000
-TOKEN_ROTATION_INTERVAL_MINUTES=15
 
-# Trading Strategy - REAL ARBITRAGE SETTINGS
-MIN_PROFIT_THRESHOLD=0.3
+# Wrap/unwrap SOL automatically
+WRAP_UNWRAP_SOL=true
 
-# Safety Limits for Real Trading
-MAX_TRADE_SIZE_SOL=0.1
-MAX_SLIPPAGE_PERCENT=5.0
-MAX_PRICE_IMPACT_PERCENT=3.0
-DAILY_LOSS_LIMIT_SOL=0.2
+# =============================================================================
+# LOGGING AND DEBUG CONFIGURATION
+# =============================================================================
+# Enable debug mode (provides more detailed logs)
+DEBUG=true
 
-# Debug Settings
-DEBUG=false
-SKIP_INTRO=true
-
-# UI Settings
-UI_COLOR=cyan
+# Log level (error, warn, info, debug)
 LOG_LEVEL=info
 
-# Environment Settings
+# Enable logging to files
+LOG_TO_FILE=true
+
+# =============================================================================
+# UI CONFIGURATION
+# =============================================================================
+# UI color scheme
+UI_COLOR=cyan
+
+# =============================================================================
+# ENVIRONMENT CONFIGURATION
+# =============================================================================
+# Node environment
 NODE_ENV=production
+
+# Network (mainnet-beta, devnet, testnet)
 NETWORK=mainnet-beta
 
-# Memory Management
-MAX_TRADE_HISTORY=500
+# =============================================================================
+# MEMORY MANAGEMENT
+# =============================================================================
+# Maximum trade history entries to keep in memory
+MAX_TRADE_HISTORY=50000
+
+# Maximum chart data points
 MAX_CHART_DATA_POINTS=100
+
+# Garbage collection interval in milliseconds
 GC_INTERVAL_MS=300000
 
-# Logging
-LOG_TO_FILE=true
+# =============================================================================
+# SAFETY SETTINGS
+# =============================================================================
+# Maximum consecutive errors before shutdown
+MAX_CONSECUTIVE_ERRORS=5
+
+# Enable emergency shutdown on critical errors
+ENABLE_EMERGENCY_SHUTDOWN=true
+
+# Maximum memory usage percentage before cleanup
+MAX_MEMORY_USAGE_PERCENT=50
