--- a/.env.example
+++ b/.env.example
@@ -1,48 +1,79 @@
-# Jupiter Arbitrage Bot Configuration
+# Jupiter Arbitrage Bot Configuration - DYNAMIC TRADE SIZING
 # Copy this to your .env file and update the values
 
 # =============================================================================
 # WALLET CONFIGURATION (REQUIRED)
 # =============================================================================
 
-PRIVATE_KEY=
-SOLANA_WALLET_PRIVATE_KEY=
+PRIVATE_KEY=your_private_key_here
+SOLANA_WALLET_PRIVATE_KEY=your_base58_private_key_here
 
 # =============================================================================
 # RPC CONFIGURATION (REQUIRED)
 # =============================================================================
-DEFAULT_RPC=https://solana-mainnet.g.alchemy.com/v2/1VO2FcU3Hv7FPSzKMQ6n4
-ALT_RPC_LIST=https://solana-mainnet.g.alchemy.com/v2/1VO2FcU3Hv7FPSzKMQ6n4
+DEFAULT_RPC=https://solana-mainnet.g.alchemy.com/v2/your_api_key
+ALT_RPC_LIST=https://api.mainnet-beta.solana.com,https://solana-api.projectserum.com
+
 # =============================================================================
-# TRADING CONFIGURATION
+# DYNAMIC TRADING CONFIGURATION - REAL TRADING ENABLED
 # =============================================================================
-# Enable/disable actual trading (set to false for simulation mode)
+# ⚠️ CRITICAL: Set to true to enable real trading with real money
 TRADING_ENABLED=true
 
-# Trade size in SOL (start small for testing)
-TRADE_SIZE_SOL=0.05
-TRADE_SIZE_STRATEGY=fixed
+# MAXIMUM trade size in SOL - Bot will find optimal sizes UP TO this limit
+MAX_TRADE_SIZE_SOL=0.15
+
+# MINIMUM trade size in SOL - Don't go below this (for gas efficiency)
+MIN_TRADE_SIZE_SOL=0.005
+
+# Dynamic sizing strategy: "optimal" or "stepped" 
+TRADE_SIZE_STRATEGY=optimal
+
+# Number of different trade sizes to test per opportunity
+TRADE_SIZE_TESTS=5
 
 # Profit threshold (minimum profit percentage to execute trade)
-MIN_PROFIT_THRESHOLD=0.025
+# 0.5 = 0.5% minimum profit per trade
+MIN_PROFIT_THRESHOLD=0.1
 
-# Maximum slippage percentage
-MAX_SLIPPAGE_PERCENT=0.8
+# Maximum slippage percentage (1.0 = 1%)
+MAX_SLIPPAGE_PERCENT=4.0
 
-# Transaction priority (micro lamports)
-PRIORITY=100000
+# Transaction priority (micro lamports) - higher = faster execution
+PRIORITY=150000
 
 # =============================================================================
-# TIMING CONFIGURATION (INCREASED FOR STABILITY)
+# MEV PROTECTION & OPTIMIZATION
 # =============================================================================
-# Minimum interval between operations (increased from 1500 to 3000ms)
-MIN_INTERVAL_MS=10000
+# Enable MEV protection strategies
+ENABLE_MEV_PROTECTION=true
 
-# Update interval for main bot loop (increased from 10000 to 20000ms)
-UPDATE_INTERVAL=30000
+# Use Jito bundles for MEV protection
+USE_JITO_BUNDLES=true
+
+# Randomize gas prices to avoid pattern detection
+RANDOMIZE_GAS=true
+
+# Private mempool submission (when available)
+USE_PRIVATE_MEMPOOL=true
+
+# Maximum acceptable MEV loss percentage
+MAX_MEV_LOSS_PERCENT=0.02
+
+# =============================================================================
+# TIMING CONFIGURATION
+# =============================================================================
+# Minimum interval between operations (milliseconds)
+MIN_INTERVAL_MS=3000
+
+# Update interval for main bot loop (milliseconds)
+UPDATE_INTERVAL=8000
 
 # Token rotation interval in minutes
-TOKEN_ROTATION_INTERVAL_MINUTES=5
+TOKEN_ROTATION_INTERVAL_MINUTES=2
+
+# Delay between trade size tests (milliseconds)
+SIZE_TEST_DELAY_MS=500
 
 # =============================================================================
 # ERROR HANDLING & RETRY CONFIGURATION
@@ -50,11 +81,11 @@ TOKEN_ROTATION_INTERVAL_MINUTES=5
 # Enable automatic retry of failed operations
 AUTO_RETRY_FAILED=true
 
-# Delay between retries (increased for better stability)
-RETRY_DELAY_MS=5000
+# Delay between retries
+RETRY_DELAY_MS=2000
 
 # Maximum retry attempts
-MAX_RETRY_ATTEMPTS=2
+MAX_RETRY_ATTEMPTS=3
 
 # =============================================================================
 # ADVANCED CONFIGURATION
@@ -64,6 +95,12 @@ ADAPTIVE_SLIPPAGE=true
 
 # Wrap/unwrap SOL automatically
 WRAP_UNWRAP_SOL=true
+
+# Enable smart order routing
+SMART_ORDER_ROUTING=true
+
+# Maximum price impact acceptable per trade
+MAX_PRICE_IMPACT_PERCENT=2.0
 
 # =============================================================================
 # LOGGING AND DEBUG CONFIGURATION
@@ -76,6 +113,9 @@ LOG_LEVEL=info
 
 # Enable logging to files
 LOG_TO_FILE=true
+
+# Log all trade size tests (can be verbose)
+LOG_SIZE_TESTS=true
 
 # =============================================================================
 # UI CONFIGURATION
@@ -96,7 +136,7 @@ NETWORK=mainnet-beta
 # MEMORY MANAGEMENT
 # =============================================================================
 # Maximum trade history entries to keep in memory
-MAX_TRADE_HISTORY=50000
+MAX_TRADE_HISTORY=1000
 
 # Maximum chart data points
 MAX_CHART_DATA_POINTS=100
@@ -108,10 +148,25 @@ GC_INTERVAL_MS=300000
 # SAFETY SETTINGS
 # =============================================================================
 # Maximum consecutive errors before shutdown
-MAX_CONSECUTIVE_ERRORS=5
+MAX_CONSECUTIVE_ERRORS=10
 
 # Enable emergency shutdown on critical errors
 ENABLE_EMERGENCY_SHUTDOWN=true
 
 # Maximum memory usage percentage before cleanup
-MAX_MEMORY_USAGE_PERCENT=50
+MAX_MEMORY_USAGE_PERCENT=80
+
+# =============================================================================
+# DYNAMIC SIZING SPECIFIC SETTINGS
+# =============================================================================
+# Minimum profit per trade in USD (overrides percentage if higher)
+MIN_PROFIT_USD=0.25
+
+# Maximum trades per token pair per hour (rate limiting)
+MAX_TRADES_PER_HOUR=640
+
+# Enable size optimization based on historical performance
+ENABLE_SIZE_OPTIMIZATION=true
+
+# Preferred trade size percentages to test (comma separated)
+PREFERRED_SIZE_PERCENTAGES=10,25,50,75,90
