--- a/package.json
+++ b/package.json
@@ -1,79 +1,52 @@
 {
-	"name": "solana-jupiter-bot",
-	"version": "0.1.72-beta-jupv4",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/benjamintan10/solana-jupiter-bot.git"
-	},
-	"bin": "./src/index.js",
-	"engines": {
-		"node": ">=16"
-	},
-	"scripts": {
-		"start": "node --no-deprecation ./src/index.js",
-		"trade": "node --no-deprecation ./src/bot/index.js",
-		"test": "xo && ava",
-		"transaction": "node ./src/utils/transaction.js"
-	},
-	"files": [
-		"./src/index.js"
-	],
-	"dependencies": {
-		"@coral-xyz/anchor": "^0",
-		"@jup-ag/api": "^6.0.40",
-		"@jup-ag/core": "^4.0.0-beta.21",
-		"@solana/web3.js": "^1.66.1",
-		"asciichart": "^1.5.25",
-		"axios": "^0.27.2",
-		"bn.js": "^5.2.1",
-		"bs58": "^5.0.0",
-		"cliui": "^7.0.4",
-		"express": "4.17.1",
-		"gradient-string": "^2.0.1",
-		"jsbi": "^4.3.0",
-		"keypress": "^0.2.1",
-		"moment": "^2.29.3",
-		"open": "^8.4.0",
-		"ora-classic": "^5.4.2",
-		"promise-retry": "^2.0.1",
-		"react": "^18.1.0",
-		"strip-ansi": "^6.0.1"
-	},
-	"ava": {
-		"require": [
-			"@babel/register"
-		]
-	},
-	"babel": {
-		"presets": [
-			"@babel/preset-env",
-			"@babel/preset-react"
-		]
-	},
-	"xo": {
-		"extends": "xo-react",
-		"rules": {
-			"react/prop-types": "off"
-		}
-	},
-	"devDependencies": {
-		"@ava/babel": "^2.0.0",
-		"@babel/preset-env": "^7.18.2",
-		"@babel/preset-react": "^7.17.12",
-		"@babel/register": "^7.17.7",
-		"chalk": "^4.1.2",
-		"eslint": "^8.19.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-config-xo-react": "^0.27.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-react": "^7.30.1",
-		"eslint-plugin-react-hooks": "^4.5.0",
-		"ink-testing-library": "^2.1.0",
-		"prettier": "2.7.1",
-		"typescript": "^4.6.4"
-	},
-	"resolutions": {
-		"@solana/buffer-layout": "4.0.0"
-	}
+  "name": "swatticus-slippagenp",
+  "version": "2.0.0",
+  "description": "Advanced Jupiter Arbitrage Bot with Real Trading Capabilities",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "setup": "node src/wizard/index.js",
+    "test-config": "node -e \"require('dotenv').config(); console.log('Trading Enabled:', process.env.TRADING_ENABLED); console.log('Trade Size:', process.env.TRADE_SIZE_SOL);\""
+  },
+  "keywords": [
+    "solana",
+    "jupiter",
+    "arbitrage",
+    "trading",
+    "defi",
+    "bot"
+  ],
+  "author": "Swatticus",
+  "license": "MIT",
+  "dependencies": {
+    "@solana/web3.js": "^1.87.6",
+    "@jup-ag/core": "^4.0.0",
+    "axios": "^1.6.2",
+    "bn.js": "^5.2.1",
+    "bs58": "^5.0.0",
+    "chalk": "^4.1.2",
+    "cli-progress": "^3.12.0",
+    "cliui": "^8.0.1",
+    "dotenv": "^16.3.1",
+    "gradient-string": "^2.0.2",
+    "keypress": "^0.2.1",
+    "moment": "^2.29.4",
+    "nodemon": "^3.0.2",
+    "open": "^8.4.2",
+    "ora-classic": "^5.4.2",
+    "asciichart": "^1.5.25",
+    "promise-retry": "^2.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.55.0",
+    "prettier": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-org/jupiter-arbitrage-bot.git"
+  }
 }
